<resources>
    <string name="app_name">NPosts</string>

    <string name="list_title">Posts</string>
    <string name="list_error_title">Something went wrong</string>
    <string name="list_error_message">We couldn\'t load the posts. Check your connection and try again.</string>
    <string name="list_retry">Try again</string>
    <string name="list_loading">Loading posts</string>
    <string name="list_empty_title">No posts left</string>
    <string name="list_empty_message">You have deleted every post. Reload to fetch them again.</string>
    <string name="list_reload">Reload</string>
    <string name="list_refresh_error">Posts could not be refreshed.</string>
    <string name="post_delete">Delete</string>
    <string name="post_deleted">Post deleted</string>
    <string name="post_undo">Undo</string>

    <string name="detail_title">Edit post</string>
    <string name="detail_back">Back</string>
    <string name="detail_post_number">Post #%1$d</string>
    <string name="detail_hint">Tap a field to edit</string>
    <string name="detail_title_label">Title</string>
    <string name="detail_body_label">Body</string>
    <string name="detail_save">Save</string>
    <string name="detail_not_found">This post is no longer available.</string>
</resources>
