<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/top_bar"
        layout="@layout/view_top_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/post_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_post" />

        <com.mert.ngamingcasestudy.ui.common.ShimmerFrameLayout
            android:id="@+id/loading_skeleton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/list_loading"
            android:visibility="gone">

            <com.mert.ngamingcasestudy.ui.list.PostListSkeletonView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="noHideDescendants" />
        </com.mert.ngamingcasestudy.ui.common.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/error_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_xl"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/error_icon_container_size"
                android:layout_height="@dimen/error_icon_container_size"
                android:background="@drawable/bg_error_icon"
                android:importantForAccessibility="no"
                android:padding="@dimen/error_icon_padding"
                android:src="@drawable/ic_cloud_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:gravity="center"
                android:text="@string/list_error_title"
                android:textAppearance="@style/TextAppearance.NGaming.TitleLarge"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:gravity="center"
                android:text="@string/list_error_message"
                android:textAppearance="@style/TextAppearance.NGaming.BodyItem"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_button"
                style="@style/Widget.NGaming.Button"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/error_action_spacing"
                android:paddingHorizontal="@dimen/spacing_lg"
                android:text="@string/list_retry"
                app:icon="@drawable/ic_refresh" />
        </LinearLayout>

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/list_empty"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
