<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/top_bar"
        layout="@layout/view_back_top_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/content_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/spacing_md"
                android:paddingTop="@dimen/spacing_lg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="@dimen/detail_avatar_size"
                        android:layout_height="@dimen/detail_avatar_size"
                        android:importantForAccessibility="no"
                        tools:src="@drawable/bg_avatar_placeholder" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_md"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/post_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.NGaming.TitleItem"
                            android:textColor="?attr/colorOnBackground"
                            tools:text="Post #2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_xs"
                            android:text="@string/detail_hint"
                            android:textAppearance="@style/TextAppearance.NGaming.BodyItem"
                            android:textColor="?attr/colorOnSurfaceVariant" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/title_label"
                    style="@style/Widget.NGaming.InputLabel"
                    android:layout_marginTop="@dimen/spacing_lg"
                    android:labelFor="@id/title_input"
                    android:text="@string/detail_title_label" />

                <EditText
                    android:id="@+id/title_input"
                    style="@style/Widget.NGaming.Input"
                    android:paddingHorizontal="@dimen/spacing_md"
                    android:paddingVertical="@dimen/spacing_sm_plus"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    tools:text="qui est esse" />

                <TextView
                    android:id="@+id/body_label"
                    style="@style/Widget.NGaming.InputLabel"
                    android:layout_marginTop="@dimen/spacing_lg"
                    android:labelFor="@id/body_input"
                    android:text="@string/detail_body_label" />

                <EditText
                    android:id="@+id/body_input"
                    style="@style/Widget.NGaming.Input"
                    android:paddingHorizontal="@dimen/spacing_md"
                    android:paddingVertical="@dimen/spacing_sm_plus"
                    android:layout_marginBottom="@dimen/spacing_md"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textMultiLine"
                    tools:text="est rerum tempore vitae\nsequi sint nihil reprehenderit dolor" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/not_found_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/spacing_md"
            android:text="@string/detail_not_found"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/save_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_md"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/Widget.NGaming.Button"
            android:layout_width="match_parent"
            android:enabled="false"
            android:text="@string/detail_save"
            app:icon="@drawable/ic_check" />
    </FrameLayout>
</LinearLayout>
